# ctrem

./: .agent_state.json  .gitignore  CMakeLists.txt  README.md
include/: ansi.h  config.h  font.h  pane.h  pty.h  retro_theme.h  tabs.h  tools.h  window.h
src/: ansi.c  config.c  font.c  main.c  pane.c  pty.c  pty_windows.c  tabs.c  tools autodetection.c  tools.c  window.c
